Dopesheet mangles keyframes #90872

Closed
opened 2021-08-23 11:24:09 +02:00 by Steffen Dünner · 9 comments

System Information
Operating system: Linux-5.11.0-27-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-23 05:08, hash: 0682af0d63
Worked: 2.93.3
Caused by b0d9e6797f

Short description of error
Using the Dopesheet completely messes up the handles and positions of keyframes even on the most basic edits. Graph Editor is alright. This is a major showstopper I guess.

Exact steps for others to reproduce the error

  • Open attached blend file (or quickly set 2 keyframes on the default cube and open the Dopesheet)
    Dopesheet_Bug_v01.blend
  • Move some keyframes in the Dopesheet. Even if you right-click to opt out of the editing operation the handles and positions of the keyframes get totally messed up.

Demo video, first using 2.93.3 where everything works as expected, 2nd half shows the same action in 3.0 master where things break:

2021-08-23 11-11-51.mp4

**System Information** Operating system: Linux-5.11.0-27-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-23 05:08, hash: `0682af0d63` Worked: 2.93.3 Caused by b0d9e6797f **Short description of error** Using the Dopesheet completely messes up the handles and positions of keyframes even on the most basic edits. Graph Editor is alright. This is a major showstopper I guess. **Exact steps for others to reproduce the error** - Open attached blend file (or quickly set 2 keyframes on the default cube and open the Dopesheet) [Dopesheet_Bug_v01.blend](https://archive.blender.org/developer/F10310401/Dopesheet_Bug_v01.blend) - Move some keyframes in the Dopesheet. Even if you right-click to opt out of the editing operation the handles and positions of the keyframes get totally messed up. Demo video, first using 2.93.3 where everything works as expected, 2nd half shows the same action in 3.0 master where things break: [2021-08-23 11-11-51.mp4](https://archive.blender.org/developer/F10310449/2021-08-23_11-11-51.mp4)

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Added subscribers: @mano-wii, @lichtwerk

Added subscribers: @mano-wii, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

CC @mano-wii
(added Modeling since this involves snapping)

CC @mano-wii (added `Modeling` since this involves snapping)
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Introduced recently between a217e043be - 962153dbed

Introduced recently between `a217e043be` - `962153dbed`
Member

Caused by b0d9e6797f

Caused by b0d9e6797f

This issue was referenced by 2f0e350ffd

This issue was referenced by 2f0e350ffd0ce1bf7ef617a678178dbfa185d3d0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-08-23 14:50:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90872
No description provided.