Fix T90872: Dopesheet messes up keyframe handles

Y coordinate was not being constrained.

Caused by {rBb0d9e6797fb866e7a58876c7977c98a190070310}